# gsurface

./: .gitignore  Example gallery — mayavi 4.7.1 documentation.url  installing mayavi.txt  notes.txt  readme.md  requirements.txt  setup.cfg  setup.py  surface_calculation.ipynb  todo.txt  ~WRL2619.tmp
dev/: build.md  cli.bat  notes.txt  todo.txt
dev/doc/: model.docx  plan.docx
doc/: 000_glossary.ipynb  000_index.ipynb  010_install.ipynb  010_installdev.ipynb  01_simple_tore_simulation.ipynb  020_force.ipynb  020_surface.ipynb  02_surface_definition.ipynb  030_interacted_models.ipynb  030_model.ipynb  030_structure_model.ipynb  040_serialization.ipynb  050_examples.ipynb  05_examples.ipynb  060_model_mcr.ipynb  060_modelrpr.ipynb  070_paradigm.ipynb  demo.ipynb  force.ipynb  intall.md  model.docx  model_comparison.docx  num_approx.ipynb  planets.ipynb  simple_tore_simulation.ipynb  surface_calculation.ipynb  tore_geodesics.ipynb
examples/: mayavi_canyon_decimation.py  mayavi_sphere.py  mayavi_tore.py  surface3d_demo2.py  surface3d_tore.py
examples/_misc/: class_decorators.py  dataclass.py  serializing classes.py  test_class.py
examples/advanced/: surface_transformation.py
examples/basic/: cateloid_surface.py  (+4 more)
gsurface/: __init__.py  __main__.py  base_model.py  examples.py  imodel.py  indexes.py  model.py  solid.py  tools.py  types.py  utils.py
ode/: system.py
surface_guided_sim/: __init__.py  diff.py  indexes.py  misc.py  model.py  model_tore.py  plotter.py
surfaceg/: indexes.py  model.py
utests/: mock.py  model_test.py
wheel/: gsurface-1.0.0.dev1-py38-none-any.whl
(+111 files in other folders)
