[metadata]
name = gsurface
version = 0.0.1
url = https://github.com/Adecy/gsurface
author = Lucas DIETRICH
author_email = pro@ldietrich.fr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: English
description = Simulate a surface-guided point mass motion according to the Newton 2nd Law Approach
long_description = file: readme.md
long_description_content_type = text/markdown


[options]
python_requires = >=3.8
packages = find:
install_requires =
    numpy==1.20.0,